[package]
name = "shopping_cart_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
serde_json = "1.0.48"
chrono = { version = "0.4.23", features = ["serde"] }
actix-cors = "0.6.4"
env_logger = "0.10.0"
jsonwebtoken = "8.2.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]